// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentsBreadcrumbs renders a ContentsBreadcrumbs component 1`] = `
<div
  className="ui breadcrumb"
>
  <a
    className="section"
    href="/contents"
    onClick={[Function]}
    title="Home"
  >
    Home
  </a>
  <div
    className="divider"
  >
    /
  </div>
  <a
    className="section"
    href="/blog/contents"
    onClick={[Function]}
  >
    Blog
  </a>
  <div
    className="divider"
  >
    /
  </div>
  <div
    className="active section"
    onClick={[Function]}
  >
    My first blog
  </div>
</div>
`;

exports[`ContentsBreadcrumbs renders a breadcrumbs component containing items with nav_title 1`] = `
<div
  className="ui breadcrumb"
>
  <a
    className="section"
    href="/contents"
    onClick={[Function]}
    title="Home"
  >
    Home
  </a>
  <div
    className="divider"
  >
    /
  </div>
  <a
    className="section"
    href="/blog/contents"
    onClick={[Function]}
  >
    Blog
  </a>
  <div
    className="divider"
  >
    /
  </div>
  <div
    className="active section"
    onClick={[Function]}
  >
    First one
  </div>
</div>
`;
